<resources>
    <string name="app_name">EmoSense</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Share pengalaman kamu belajar di Dicoding yuk!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Data Diri</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Siap membagikan cerita?</string>
    <string name="title_login_page">Selamat Datang Kembali di Emosense!</string>
    <string name="name">Nama</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="hint_password">Masukkan password...</string>
    <string name="title_family_data">Data Keluarga</string>
    <string name="family_name">Nama</string>
    <string name="family_dob">Tanggal Lahir</string>
    <string name="family_adhd_description">Deskripsi ADHD</string>
    <string name="empty_image_warning">Anda belum memasukkan gambar</string>
    <string-array name="data_title">
        <item>Perlunya Sensitivitas Orang Tua dengan Anak Berkebutuhan Khusus di Tempat Umum</item>
        <item>3 Tips Liburan untuk Anak Penyandang Autisme</item>
        <item>Saran Guru Besar FKUI buat yang Ingin Masukkan Anak ke Sekolah Inklusif</item>
        <item>Autisme Tak Selalu karena Faktor Genetik dan Bukan Penyakit</item>
        <item>Disney Ubah Layanan untuk Penyandang Disabilitas di Disneyland dan Walt Disney World</item>

        <item>Perlunya Sensitivitas Orang Tua dengan Anak Berkebutuhan Khusus di Tempat Umum</item>
        <item>3 Tips Liburan untuk Anak Penyandang Autisme</item>
        <item>Saran Guru Besar FKUI buat yang Ingin Masukkan Anak ke Sekolah Inklusif</item>
        <item>Autisme Tak Selalu karena Faktor Genetik dan Bukan Penyakit</item>
        <item>Disney Ubah Layanan untuk Penyandang Disabilitas di Disneyland dan Walt Disney World</item>
    </string-array>
</resources>